--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auth-match",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,11 +11,14 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.5",
+    "@hookform/resolvers": "^5.2.2",
     "framer-motion": "^12.23.24",
     "next": "16.0.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.66.1",
+    "react-icons": "^5.5.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
